post graph request to fetch
